# oliepriser_scraper_py

./: .env  .gitignore  Dockerfile  credentials.py  main.py  provider.py  pyproject.toml  pytest.ini  requirements.txt  scraper.py
.github/workflows/: build.yml
.ssh/: id_ed25519.pub
src/: main.py
terraform-deployment/: main.tf  outputs.tf  variables.tf
tests/: test_connection.py
